--- a/style.css
+++ b/style.css
@@ -1,173 +1,7 @@
 /*estilo highAchivers_>NOWYOU*/
 
 @charset "UTF-8";
-@font-face {
-    font-family: Conv_CaeciliaLTStd-Roman;
-    src: url(fonts/CaeciliaLTStd-Roman.eot);
-    src: local("☺"),url(fonts/CaeciliaLTStd-Roman.woff) format("woff"),url(fonts/CaeciliaLTStd-Roman.ttf) format("truetype"),url(fonts/CaeciliaLTStd-Roman.svg) format("svg");
-    font-weight: 400;
-    font-style: normal
-}
 
-@font-face {
-    font-family: Conv_DINEngschriftStd;
-    src: url(fonts/DINEngschriftStd.eot);
-    src: local("☺"),url(fonts/DINEngschriftStd.woff) format("woff"),url(fonts/DINEngschriftStd.ttf) format("truetype"),url(fonts/DINEngschriftStd.svg) format("svg");
-    font-weight: 400;
-    font-style: normal
-}
-
-@font-face {
-    font-family: Conv_FuturaStd-Bold;
-    src: url(fonts/FuturaStd-Bold.eot);
-    src: local("☺"),url(fonts/FuturaStd-Bold.woff) format("woff"),url(fonts/FuturaStd-Bold.ttf) format("truetype"),url(fonts/FuturaStd-Bold.svg) format("svg");
-    font-weight: 400;
-    font-style: normal
-}
-
-@font-face {
-    font-family: Conv_FuturaStd-Book;
-    src: url(fonts/FuturaStd-Book.eot);
-    src: local("☺"),url(fonts/FuturaStd-Book.woff) format("woff"),url(fonts/FuturaStd-Book.ttf) format("truetype"),url(fonts/FuturaStd-Book.svg) format("svg");
-    font-weight: 400;
-    font-style: normal
-}
-
-@font-face {
-    font-family: Conv_FuturaStd-BookOblique;
-    src: url(fonts/FuturaStd-BookOblique.eot);
-    src: local("☺"),url(fonts/FuturaStd-BookOblique.woff) format("woff"),url(fonts/FuturaStd-BookOblique.ttf) format("truetype"),url(fonts/FuturaStd-BookOblique.svg) format("svg");
-    font-weight: 400;
-    font-style: normal
-}
-
-@font-face {
-    font-family: Conv_FuturaStd-Heavy;
-    src: url(fonts/FuturaStd-Heavy.eot);
-    src: local("☺"),url(fonts/FuturaStd-Heavy.woff) format("woff"),url(fonts/FuturaStd-Heavy.ttf) format("truetype"),url(fonts/FuturaStd-Heavy.svg) format("svg");
-    font-weight: 400;
-    font-style: normal
-}
-
-@font-face {
-    font-family: Conv_FuturaStd-HeavyOblique;
-    src: url(fonts/FuturaStd-HeavyOblique.eot);
-    src: local("☺"),url(fonts/FuturaStd-HeavyOblique.woff) format("woff"),url(fonts/FuturaStd-HeavyOblique.ttf) format("truetype"),url(fonts/FuturaStd-HeavyOblique.svg) format("svg");
-    font-weight: 400;
-    font-style: normal
-}
-
-@font-face {
-    font-family: Conv_FuturaStd-Medium;
-    src: url(fonts/FuturaStd-Medium.eot);
-    src: local("☺"),url(fonts/FuturaStd-Medium.woff) format("woff"),url(fonts/FuturaStd-Medium.ttf) format("truetype"),url(fonts/FuturaStd-Medium.svg) format("svg");
-    font-weight: 400;
-    font-style: normal
-}
-
-@font-face {
-    font-family: Conv_HelveticaNeueLTStd-Bd;
-    src: url(fonts/HelveticaNeueLTStd-Bd.eot);
-    src: local("☺"),url(fonts/HelveticaNeueLTStd-Bd.woff) format("woff"),url(fonts/HelveticaNeueLTStd-Bd.ttf) format("truetype"),url(fonts/HelveticaNeueLTStd-Bd.svg) format("svg");
-    font-weight: 400;
-    font-style: normal
-}
-
-@font-face {
-    font-family: Conv_HelveticaNeueLTStd-It;
-    src: url(fonts/HelveticaNeueLTStd-It.eot);
-    src: local("☺"),url(fonts/HelveticaNeueLTStd-It.woff) format("woff"),url(fonts/HelveticaNeueLTStd-It.ttf) format("truetype"),url(fonts/HelveticaNeueLTStd-It.svg) format("svg");
-    font-weight: 400;
-    font-style: normal
-}
-
-@font-face {
-    font-family: Conv_HelveticaNeueLTStd-Roman;
-    src: url(fonts/HelveticaNeueLTStd-Roman.eot);
-    src: local("☺"),url(fonts/HelveticaNeueLTStd-Roman.woff) format("woff"),url(fonts/HelveticaNeueLTStd-Roman.ttf) format("truetype"),url(fonts/HelveticaNeueLTStd-Roman.svg) format("svg");
-    font-weight: 400;
-    font-style: normal
-}
-
-@font-face {
-    font-family: Conv_MYRIADPRO-BOLD;
-    src: url(fonts/MYRIADPRO-BOLD.eot);
-    src: local("☺"),url(fonts/MYRIADPRO-BOLD.woff) format("woff"),url(fonts/MYRIADPRO-BOLD.ttf) format("truetype"),url(fonts/MYRIADPRO-BOLD.svg) format("svg");
-    font-weight: 400;
-    font-style: normal
-}
-
-@font-face {
-    font-family: Conv_MYRIADPRO-IT;
-    src: url(fonts/MYRIADPRO-IT.eot);
-    src: local("☺"),url(fonts/MYRIADPRO-IT.woff) format("woff"),url(fonts/MYRIADPRO-IT.ttf) format("truetype"),url(fonts/MYRIADPRO-IT.svg) format("svg");
-    font-weight: 400;
-    font-style: normal
-}
-
-@font-face {
-    font-family: Conv_MYRIADPRO-REGULAR;
-    src: url(fonts/MYRIADPRO-REGULAR.eot);
-    src: local("☺"),url(fonts/MYRIADPRO-REGULAR.woff) format("woff"),url(fonts/MYRIADPRO-REGULAR.ttf) format("truetype"),url(fonts/MYRIADPRO-REGULAR.svg) format("svg");
-    font-weight: 400;
-    font-style: normal
-}
-
-@font-face {
-    font-family: Conv_MYRIADPRO-SEMIBOLDSEMICN;
-    src: url(fonts/MYRIADPRO-SEMIBOLDSEMICN.eot);
-    src: local("☺"),url(fonts/MYRIADPRO-SEMIBOLDSEMICN.woff) format("woff"),url(fonts/MYRIADPRO-SEMIBOLDSEMICN.ttf) format("truetype"),url(fonts/MYRIADPRO-SEMIBOLDSEMICN.svg) format("svg");
-    font-weight: 400;
-    font-style: normal
-}
-
-@font-face {
-    font-family: Conv_NewBaskervilleStd-Bold;
-    src: url(fonts/NewBaskervilleStd-Bold.eot);
-    src: local("☺"),url(fonts/NewBaskervilleStd-Bold.woff) format("woff"),url(fonts/NewBaskervilleStd-Bold.ttf) format("truetype"),url(fonts/NewBaskervilleStd-Bold.svg) format("svg");
-    font-weight: 400;
-    font-style: normal
-}
-
-@font-face {
-    font-family: Conv_StoneSansStd-Phonetic;
-    src: url(fonts/StoneSansStd-Phonetic.eot);
-    src: local("☺"),url(fonts/StoneSansStd-Phonetic.woff) format("woff"),url(fonts/StoneSansStd-Phonetic.ttf) format("truetype"),url(fonts/StoneSansStd-Phonetic.svg) format("svg");
-    font-weight: 400;
-    font-style: normal
-}
-
-@font-face {
-    font-family: Conv_TektonPro-Regular;
-    src: url(fonts/TektonPro-Regular.eot);
-    src: local("☺"),url(fonts/TektonPro-Regular.woff) format("woff"),url(fonts/TektonPro-Regular.ttf) format("truetype"),url(fonts/TektonPro-Regular.svg) format("svg");
-    font-weight: 400;
-    font-style: normal
-}
-
-@font-face {
-    font-family: Conv_TimesLTStd-Bold;
-    src: url(fonts/TimesLTStd-Bold.eot);
-    src: local("☺"),url(fonts/TimesLTStd-Bold.woff) format("woff"),url(fonts/TimesLTStd-Bold.ttf) format("truetype"),url(fonts/TimesLTStd-Bold.svg) format("svg");
-    font-weight: 400;
-    font-style: normal
-}
-
-@font-face {
-    font-family: Conv_TimesLTStd-Roman;
-    src: url(fonts/TimesLTStd-Roman.eot);
-    src: local("☺"),url(fonts/TimesLTStd-Roman.woff) format("woff"),url(fonts/TimesLTStd-Roman.ttf) format("truetype"),url(fonts/TimesLTStd-Roman.svg) format("svg");
-    font-weight: 400;
-    font-style: normal
-}
-
-@font-face {
-    font-family: Conv_ZAPFDINGBATSSTD;
-    src: url(fonts/ZAPFDINGBATSSTD.eot);
-    src: local("☺"),url(fonts/ZAPFDINGBATSSTD.woff) format("woff"),url(fonts/ZAPFDINGBATSSTD.ttf) format("truetype"),url(fonts/ZAPFDINGBATSSTD.svg) format("svg");
-    font-weight: 400;
-    font-style: normal
-}
 
 body {
     height: auto;
@@ -621,23 +455,21 @@ body:not(.edit) #actividad a:not(.cke_button):not(.zoom_flag_img) {
     background-color: inherit
 }
 
-.bck-title {
+/*.bck-title {
     color: #000
-}
+}*/
 
 .bck-title-1 {
-    color: #fff;
+    color: #EC6F59;
+    border: 2px solid #ec6f59;
     font-size: 2rem;
-    background: #2e73b9;
+    background: #ffffff;
     width: fit-content;
-    position: relative;
-    text-align: left;
-    padding: 7px 20px 7px 54px;
-    left: -97px;
+    padding: 7PX 70PX 7px 24px;
+    border-radius: 30px 10px 37px 10px;
     font-weight: 700;
-    font-family: Conv_FuturaStd-Book;
-    margin-top: 0
 }
+
 
 .bck-title-1:before {
     content: none;
@@ -973,7 +805,10 @@ body:not(.edit) #actividad a:not(.cke_button):not(.zoom_flag_img) {
     margin-left: -19px
 }
 
-#actividad .content .cke_contents .bck-ol li:before,#actividad .content .texto_curso .bck-ol li:before,#actividad .content .workspace ul li .bck-ol li:before,#actividad .popover-content .bck-ol li:before {
+#actividad .content .cke_contents .bck-ol li:before,
+#actividad .content .texto_curso .bck-ol li:before,
+#actividad .content .workspace ul li .bck-ol li:before,
+#actividad .popover-content .bck-ol li:before {
     position: relative;
     text-align: center;
     margin-left: -10px
@@ -983,40 +818,50 @@ body:not(.edit) #actividad a:not(.cke_button):not(.zoom_flag_img) {
     margin-left: 0
 }
 
-#actividad .content .cke_contents .bck-ol-1,#actividad .content .texto_curso .bck-ol-1,#actividad .content .workspace ul li .bck-ol-1,#actividad .popover-content .bck-ol-1 {
+#actividad .content .cke_contents .bck-ol-1,
+#actividad .content .texto_curso .bck-ol-1,
+#actividad .content .workspace ul li .bck-ol-1,
+#actividad .popover-content .bck-ol-1 {
     list-style-type: none;
     counter-reset: bck-li-counter
 }
 
-#actividad .content .cke_contents .bck-ol-1 li,#actividad .content .texto_curso .bck-ol-1 li,#actividad .content .workspace ul li .bck-ol-1 li,#actividad .popover-content .bck-ol-1 li {
+#actividad .content .cke_contents .bck-ol-1 li, 
+#actividad .content .texto_curso .bck-ol-1 li, 
+#actividad .content .workspace ul li .bck-ol-1 li, 
+#actividad .popover-content .bck-ol-1 li {
     counter-increment: bck-li-counter;
     padding-left: 0;
     position: relative;
     z-index: 0;
-    font-weight: 500;
+    font-weight: 700;
     margin-left: -12px;
     margin-top: 10px;
     font-size: 2rem;
-    font-family: Conv_FuturaStd-Medium;
-    line-height: 1.8em!important
+    /* font-family: Conv_FuturaStd-Medium; */
+    line-height: 1.8em!important;
 }
 
-#actividad .content .cke_contents .bck-ol-1 li:before,#actividad .content .texto_curso .bck-ol-1 li:before,#actividad .content .workspace ul li .bck-ol-1 li:before,#actividad .popover-content .bck-ol-1 li:before {
+
+#actividad .content .cke_contents .bck-ol-1 li:before, 
+#actividad .content .texto_curso .bck-ol-1 li:before, 
+#actividad .content .workspace ul li .bck-ol-1 li:before, 
+#actividad .popover-content .bck-ol-1 li:before {
     content: counter(bck-li-counter);
     width: 32px;
     height: 27px;
     position: absolute;
-    color: #fff;
+    color: #ec6f59;
     background: none;
-    margin-left: -46px;
+    margin-left: -50px;
     margin-right: 0;
     text-align: right;
-    font-family: Conv_FuturaStd-Medium;
+    /* font-family: Conv_FuturaStd-Medium; */
     font-size: 2.3rem;
     font-weight: 600;
     line-height: normal;
-    top: 1px;
-    left: auto
+    top: 5px;
+    left: auto;
 }
 
 #actividad .content .cke_contents .bck-ol-2,#actividad .content .texto_curso .bck-ol-2,#actividad .content .workspace ul li .bck-ol-2,#actividad .popover-content .bck-ol-2 {
