--- a/style.css
+++ b/style.css
@@ -638,17 +638,17 @@ body:not(.edit) #actividad a:not(.cke_button):not(.zoom_flag_img) {
     padding: 10px 13px
 }
 
-.bck-enfasis {
+/*enfasis*/
+/*.bck-enfasis {
     font-size: 5rem;
     color: inherit
-}
+}*/
 
 .bck-enfasis-1 {
-    color: #00acb3;
-    font-size: 8rem;
-    position: relative;
-    top: 15px;
-    text-shadow: 1px 0 0 #fff,-1px 0 0 #fff,0 1px 0 #fff,0 -1px 0 #fff,1px 1px #fff,-1px -1px 0 #fff,1px -1px 0 #fff,-1px 1px 0 #fff
+    padding: 7px 18px;
+    /* border: 4px solid #FFCF01; */
+    background-color: #DAEDF8;
+    border-radius: 155px 55px 125px 55px/55px 125px 55px 155px;
 }
 
 .bck-enfasis-2 {
@@ -702,7 +702,7 @@ body:not(.edit) #actividad a:not(.cke_button):not(.zoom_flag_img) {
     font-size: 1.8rem
 }
 
-.bck-enfasis-9,.bck-enfasis-10 {
+.bck-enfasis-9 {
     font-size: 1.4rem;
     color: #575656;
     font-weight: 700
@@ -868,7 +868,7 @@ body:not(.edit) #actividad a:not(.cke_button):not(.zoom_flag_img) {
     position: relative;
     z-index: 0;
     font-weight: 600;
-    margin-left: -12px;
+    margin-left: -15px;
     margin-top: 10px;
     font-size: 2rem;
     /* font-family: Conv_FuturaStd-Medium; */
@@ -886,7 +886,7 @@ body:not(.edit) #actividad a:not(.cke_button):not(.zoom_flag_img) {
     position: absolute;
     color: #ec6f59;
     background: none;
-    margin-left: -40px;
+    margin-left: -30px;
     margin-right: 0;
     text-align: right;
     /* font-family: Conv_FuturaStd-Medium; */
