--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body {
     height: auto;
     font-size: 16px;
     font-weight: 500;
+    color: #231F20;
     /*font-family: Conv_FuturaStd-Medium*/
 }
 
@@ -442,7 +443,7 @@ body #actividad .workspace.chooseblanks .inline-answer a {
 #actividad .player.audio,#actividad .player.video,
 #help-panel-content .player,#remote-alert-modal-rich .player {
     height: 30px!important;
-    width: 35px;
+    width: 28px;
     display: inline-block;
     background-repeat: no-repeat;
     border-radius: 0;
@@ -648,7 +649,7 @@ body:not(.edit) #actividad a:not(.cke_button):not(.zoom_flag_img) {
     padding: 7px 18px;
     /* border: 4px solid #FFCF01; */
     background-color: #DAEDF8;
-    border-radius: 155px 55px 125px 55px/55px 125px 55px 155px;
+    border-radius: 155px 55px 119px 67px/55px 125px 31px 111px;
 }
 
 .bck-enfasis-2 {
@@ -725,6 +726,8 @@ body:not(.edit) #actividad a:not(.cke_button):not(.zoom_flag_img) {
     line-height: 1.8em!important
 }
 
+/*lista desordenadas*/
+
 .popover-template .popover-content ul li,.texto_curso ul li {
     padding-left: 42px
 }
@@ -742,7 +745,9 @@ body:not(.edit) #actividad a:not(.cke_button):not(.zoom_flag_img) {
     left: inherit
 }
 
-#actividad .content .texto_curso .bck-ul-3 li,#actividad .content .workspace ul li .bck-ul-3 li,#actividad .popover-background.shown .popover-content .bck-ul-3 li {
+#actividad .content .texto_curso .bck-ul-3 li,
+#actividad .content .workspace ul li .bck-ul-3 li,
+#actividad .popover-background.shown .popover-content .bck-ul-3 li {
     font-size: 2rem;
     font-weight: 100
 }
@@ -802,7 +807,9 @@ body:not(.edit) #actividad a:not(.cke_button):not(.zoom_flag_img) {
     margin: 13px 0 0 -15px
 }
 
-#actividad .content .texto_curso .bck-ul-4 li,#actividad .content .workspace ul li .bck-ul-4 li,#actividad .popover-background.shown .popover-content .bck-ul-4 li {
+#actividad .content .texto_curso .bck-ul-4 li,
+#actividad .content .workspace ul li .bck-ul-4 li,
+#actividad .popover-background.shown .popover-content .bck-ul-4 li {
     font-size: 1.8rem;
     font-weight: 100;
     margin-left: -2px;
@@ -810,7 +817,9 @@ body:not(.edit) #actividad a:not(.cke_button):not(.zoom_flag_img) {
     margin-bottom: 0
 }
 
-#actividad .content .texto_curso .bck-ul-4 li:before,#actividad .content .workspace ul li .bck-ul-4 li:before,#actividad .popover-background.shown .popover-content .bck-ul-4 li:before {
+#actividad .content .texto_curso .bck-ul-4 li:before,
+#actividad .content .workspace ul li .bck-ul-4 li:before,
+#actividad .popover-background.shown .popover-content .bck-ul-4 li:before {
     content: "";
     height: 8px;
     width: 8px;
@@ -820,7 +829,9 @@ body:not(.edit) #actividad a:not(.cke_button):not(.zoom_flag_img) {
     margin-left: -19px
 }
 
-#actividad .content .texto_curso .bck-ul-5 li,#actividad .content .workspace ul li .bck-ul-5 li,#actividad .popover-background.shown .popover-content .bck-ul-5 li {
+#actividad .content .texto_curso .bck-ul-5 li,
+#actividad .content .workspace ul li .bck-ul-5 li,
+#actividad .popover-background.shown .popover-content .bck-ul-5 li {
     font-size: 1.8rem;
     font-weight: 100;
     margin-left: -2px;
@@ -828,7 +839,9 @@ body:not(.edit) #actividad a:not(.cke_button):not(.zoom_flag_img) {
     margin-bottom: 0
 }
 
-#actividad .content .texto_curso .bck-ul-5 li:before,#actividad .content .workspace ul li .bck-ul-5 li:before,#actividad .popover-background.shown .popover-content .bck-ul-5 li:before {
+#actividad .content .texto_curso .bck-ul-5 li:before,
+#actividad .content .workspace ul li .bck-ul-5 li:before,
+#actividad .popover-background.shown .popover-content .bck-ul-5 li:before {
     content: "";
     height: 8px;
     width: 8px;
@@ -837,6 +850,8 @@ body:not(.edit) #actividad a:not(.cke_button):not(.zoom_flag_img) {
     margin-top: 14px;
     margin-left: -19px
 }
+
+/*listas ordenadas*/
 
 #actividad .content .cke_contents .bck-ol li:before,
 #actividad .content .texto_curso .bck-ol li:before,
@@ -886,7 +901,7 @@ body:not(.edit) #actividad a:not(.cke_button):not(.zoom_flag_img) {
     position: absolute;
     color: #ec6f59;
     background: none;
-    margin-left: -30px;
+    margin-left: -40px;
     margin-right: 0;
     text-align: right;
     /* font-family: Conv_FuturaStd-Medium; */
@@ -897,43 +912,55 @@ body:not(.edit) #actividad a:not(.cke_button):not(.zoom_flag_img) {
     left: auto;
 }
 
-#actividad .content .cke_contents .bck-ol-2,#actividad .content .texto_curso .bck-ol-2,#actividad .content .workspace ul li .bck-ol-2,#actividad .popover-content .bck-ol-2 {
+#actividad .content .cke_contents .bck-ol-2,
+#actividad .content .texto_curso .bck-ol-2,
+#actividad .content .workspace ul li .bck-ol-2,
+#actividad .popover-content .bck-ol-2 {
     list-style-type: none;
     counter-reset: bck-li-counter
 }
 
-#actividad .content .cke_contents .bck-ol-2 li,#actividad .content .texto_curso .bck-ol-2 li,#actividad .content .workspace ul li .bck-ol-2 li,#actividad .popover-content .bck-ol-2 li {
+#actividad .content .cke_contents .bck-ol-2 li,
+#actividad .content .texto_curso .bck-ol-2 li,
+#actividad .content .workspace ul li .bck-ol-2 li,
+#actividad .popover-content .bck-ol-2 li {
     counter-increment: bck-li-counter;
     padding-left: 0;
     position: relative;
     z-index: 0;
     margin-left: 0;
     margin-top: 10px;
-    font-size: 22px;
     font-weight: 600
 }
 
-#actividad .content .cke_contents ol.bck-ol-2 li:before,#actividad .content .texto_curso ol.bck-ol-2 li:before,#actividad .content .workspace ul li ol.bck-ol-2 li:before,#actividad .popover-content ol.bck-ol-2 li:before {
+#actividad .content .cke_contents ol.bck-ol-2 li:before, 
+#actividad .content .texto_curso ol.bck-ol-2 li:before, 
+#actividad .content .workspace ul li ol.bck-ol-2 li:before, 
+#actividad .popover-content ol.bck-ol-2 li:before {
     content: counter(bck-li-counter) " ";
-    width: 27px;
-    height: 27px;
     position: relative;
-    font-size: 2.2rem;
+    font-size: 1.9rem;
     font-weight: 600;
-    color: #009fa5;
+    color: #414141;
     background: none;
-    margin-left: -35px;
+    margin-left: -29px;
     margin-right: 0;
     text-align: right;
-    font-family: Conv_FuturaStd-Bold
+    /* font-family: Conv_FuturaStd-Bold; */
 }
 
-#actividad .content .cke_contents .bck-ol-3,#actividad .content .texto_curso .bck-ol-3,#actividad .content .workspace ul li .bck-ol-3,#actividad .popover-content .bck-ol-3 {
+#actividad .content .cke_contents .bck-ol-3,
+#actividad .content .texto_curso .bck-ol-3,
+#actividad .content .workspace ul li .bck-ol-3,
+#actividad .popover-content .bck-ol-3 {
     list-style-type: none;
     counter-reset: bck-li-counter
 }
 
-#actividad .content .cke_contents .bck-ol-3 li,#actividad .content .texto_curso .bck-ol-3 li,#actividad .content .workspace ul li .bck-ol-3 li,#actividad .popover-content .bck-ol-3 li {
+#actividad .content .cke_contents .bck-ol-3 li,
+#actividad .content .texto_curso .bck-ol-3 li,
+#actividad .content .workspace ul li .bck-ol-3 li,
+#actividad .popover-content .bck-ol-3 li {
     counter-increment: bck-li-counter;
     padding-left: 0;
     position: relative;
