--- a/style.css
+++ b/style.css
@@ -663,8 +663,11 @@ body:not(.edit) #actividad a:not(.cke_button):not(.zoom_flag_img) {
 }
 
 .bck-enfasis-3 {
-    background-color: #353533;
-    padding: 3px
+    font-size: 2.3rem;
+    /* font-family: Conv_FuturaStd-Medium; */
+    color: #6C808B;
+    font-weight: 500;
+    font-style: italic;
 }
 
 .bck-enfasis-4 {
@@ -1197,9 +1200,10 @@ body:not(.edit) #actividad a:not(.cke_button):not(.zoom_flag_img) {
     background-image: url(images/icono_caja_02.png);
     content: " ";
     position: absolute;
-    left: -42px;
+    left: 10%;
+    margin-top: -5px;
     z-index: 100;
-    padding: 70px;
+    padding: 10px;
     background-repeat: no-repeat;
     background-size: contain;
     display: inline-block;
@@ -1207,48 +1211,34 @@ body:not(.edit) #actividad a:not(.cke_button):not(.zoom_flag_img) {
 
 
 .bck-box.bck-box-3 {
-    margin-top: 20px;
-    padding: 20px 25px 2px 80px;
-    background: #00b1b7
-}
-
-.bck-box.bck-box-3 .bck-content {
-    border: 0;
-    font-size: 2.5rem;
-    text-align: left;
-    font-weight: 600;
-    padding: 5px 5px 5px 20px;
-    background-color: #00b1b7;
-    color: #fff
+    margin-top: 15px;
+    border: none;
+    background: transparent
 }
 
 .bck-box.bck-box-3 .bck-title {
-    text-align: left;
-    border: 0;
-    color: #00b1b7;
-    font-size: 2.5rem;
-    font-weight: 800;
-    background-color: #fff;
-    margin-bottom: 5px;
-    z-index: 50;
-    padding: 3px 10px 3px 20px;
-    position: relative;
-    width: fit-content
+    color: inherit
 }
 
-.bck-box.bck-box-3 .bck-title:before {
-    background-image: url(images/rich_english_U7_pg64_img_0002.png);
-    content: "";
-    background-size: contain;
-    background-repeat: no-repeat;
-    padding: 49px 39px 0 24px;
+.bck-box.bck-box-3 .bck-content {
+    background-color: #ffffff;
+    border: 1px solid #ec6f59;
+    border-radius: 30px 30px 30px 30px;
+    padding: 8px 18px 8px 19px;
+    width: fit-content;
+}
+
+.bck-box.bck-box-3:after {
+    background-image: url(images/icono_caja_02derecha.png);
+    content: " ";
     position: absolute;
-    left: -52px;
+    left: 10%;
+    margin-top: -5px;
     z-index: 100;
-    top: 0;
-    width: 10px;
-    height: auto;
-    margin-top: -6px
+    padding: 10px;
+    background-repeat: no-repeat;
+    background-size: contain;
+    display: inline-block;
 }
 
 .bck-box.bck-box-4 {
