--- a/style.css
+++ b/style.css
@@ -64,9 +64,6 @@ p {
     line-height: 1.7em!important
 }
 
-strong {
-    font-family: Conv_FuturaStd-Bold
-}
 
 #book-index #indice .units ul li.active a,#book-index .col-main,body:not(.isTablet) #book-index #indice .units ul li:not(.disabled) a:hover {
     background: #0ca1ea
@@ -656,7 +653,7 @@ body:not(.edit) #actividad a:not(.cke_button):not(.zoom_flag_img) {
 }
 
 .bck-enfasis-2 {
-    font-size: 2.3rem;
+    font-size: 2rem;
     /* font-family: Conv_FuturaStd-Medium; */
     color: #2298D4;
     font-weight: 500;
@@ -752,26 +749,7 @@ body:not(.edit) #actividad a:not(.cke_button):not(.zoom_flag_img) {
     left: inherit
 }
 
-#actividad .content .texto_curso .bck-ul-3 li,
-#actividad .content .workspace ul li .bck-ul-3 li,
-#actividad .popover-background.shown .popover-content .bck-ul-3 li {
-    font-size: 2rem;
-    font-weight: 100
-}
 
-#actividad .content .texto_curso .bck-ul-3 li:before,
-#actividad .content .workspace ul li .bck-ul-3 li:before,
-#actividad .popover-background.shown .popover-content .bck-ul-3 li:before {
-    content: "";
-    height: 6px;
-    width: 6px;
-    background-color: #333;
-    position: absolute;
-    top: 2px;
-    border-radius: 100%;
-    margin: 12px 0 0 -15px;
-    left: auto
-}
 
 #actividad .content .texto_curso .bck-ul-1 li,
 #actividad .content .workspace ul li .bck-ul-1 li,
@@ -814,49 +792,7 @@ body:not(.edit) #actividad a:not(.cke_button):not(.zoom_flag_img) {
     margin: 13px 0 0 -15px
 }
 
-#actividad .content .texto_curso .bck-ul-4 li,
-#actividad .content .workspace ul li .bck-ul-4 li,
-#actividad .popover-background.shown .popover-content .bck-ul-4 li {
-    font-size: 1.8rem;
-    font-weight: 100;
-    margin-left: -2px;
-    color: #009fa5;
-    margin-bottom: 0
-}
 
-#actividad .content .texto_curso .bck-ul-4 li:before,
-#actividad .content .workspace ul li .bck-ul-4 li:before,
-#actividad .popover-background.shown .popover-content .bck-ul-4 li:before {
-    content: "";
-    height: 8px;
-    width: 8px;
-    background-color: #009fa5;
-    border-radius: 0;
-    margin-top: 14px;
-    margin-left: -19px
-}
-
-#actividad .content .texto_curso .bck-ul-5 li,
-#actividad .content .workspace ul li .bck-ul-5 li,
-#actividad .popover-background.shown .popover-content .bck-ul-5 li {
-    font-size: 1.8rem;
-    font-weight: 100;
-    margin-left: -2px;
-    color: #fff;
-    margin-bottom: 0
-}
-
-#actividad .content .texto_curso .bck-ul-5 li:before,
-#actividad .content .workspace ul li .bck-ul-5 li:before,
-#actividad .popover-background.shown .popover-content .bck-ul-5 li:before {
-    content: "";
-    height: 8px;
-    width: 8px;
-    background-color: #fff;
-    border-radius: 0;
-    margin-top: 14px;
-    margin-left: -19px
-}
 
 /*listas ordenadas*/
 
@@ -2327,6 +2263,15 @@ table td.bck-td-10 {
     width: 325px
 }
 
+/*botones*/
+.btn {
+    padding: 6px 15px;
+    -webkit-border-radius: 30px 10px 37px 10px;
+    -moz-border-radius: 30px 10px 37px 10px;
+    border-radius: 30px 10px 37px 10px;
+    font-size: 14px;
+}
+
 .btn-primary,.btn-primary.disabled {
     background-color: #ea5b0c
 }
@@ -2351,18 +2296,26 @@ table td.bck-td-10 {
     background-color: #1098be
 }
 
-.btn-primary.active,.btn-primary.disabled:focus,.btn-primary.disabled:hover,.btn-primary:active,.btn-primary:focus,.btn-primary:hover,
+.btn-primary.active,
+.btn-primary.disabled:focus,
+.btn-primary.disabled:hover,
+.btn-primary:active,.btn-primary:focus,
+.btn-primary:hover,
 .open .dropdown-toggle.btn-primary {
     background-color: #0091ba
 }
 
 #actividad .content .review .attemps span {
-    background-color: #08a9d7
+    background-color: #08a9d7;
+    border-radius: 30px 10px 37px 10px;
+
 }
 
 #actividad .portada .class_slide {
     padding: 0 97px;
-    margin-top: -2%
+    margin-top: -2%;
+    width: 40px;
+    height: 35px;
 }
 
 #actividad .carousel-inner .portada .item-container {
@@ -2548,6 +2501,7 @@ table td.bck-td-10 {
 }
 
 /*activitytag*/
+/*activitytag_vocabulary*/
 .activitytag_vocabulary .bck-title-1 {
     color: #208FCF;
     border: 2px solid #208FCF !important;
@@ -2559,6 +2513,20 @@ table td.bck-td-10 {
 
 .activitytag_vocabulary .item-container .icon-hablar:before {
     background-image: url(images/icono_hablar_azul.png);
+}
+
+/*activitytag_grammar*/
+.activitytag_grammar .bck-title-1 {
+    color: #208FCF;
+    border: 2px solid #78AA42 !important;
+}
+
+.activitytag_grammar .bck-title-2 {
+    color: #78AA42;
+}
+
+.activitytag_grammar .item-container .icon-hablar:before {
+    background-image: url(images/icono_hablar_verde.png);
 }
 
 /*unittag*/
