--- a/style.css
+++ b/style.css
@@ -732,7 +732,8 @@ body:not(.edit) #actividad a:not(.cke_button):not(.zoom_flag_img) {
 
 /*lista desordenadas*/
 
-.popover-template .popover-content ul li,.texto_curso ul li {
+.popover-template .popover-content ul li,
+.texto_curso ul li {
     padding-left: 42px
 }
 
@@ -740,7 +741,9 @@ body:not(.edit) #actividad a:not(.cke_button):not(.zoom_flag_img) {
     position: absolute
 }
 
-#actividad .popover-content ul li,#actividad .texto_curso li,#actividad .workspace ul li li {
+#actividad .popover-content ul li,
+#actividad .texto_curso li,
+#actividad .workspace ul li li {
     position: relative;
     margin-bottom: 10px
 }
@@ -750,18 +753,69 @@ body:not(.edit) #actividad a:not(.cke_button):not(.zoom_flag_img) {
 }
 
 
+/*lista desordenada por defecto, sin seleccionar estilo para la ul*/
 
+#actividad .content .texto_curso ul li:before,
+#actividad .content .workspace ul li ul li:before {
+    content: "";
+    height: 9px;
+    width: 9px;
+    background-color: #fff;
+    color: #fff;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    border-radius: 50%;
+}
+
+#actividad .content .texto_curso ul li::before,
+#actividad .content .workspace ul li ul li::before,
+#actividad .content .texto_curso .bck-ul li::before,
+#actividad .content .workspace ul li .bck-ul li::before,
+#actividad .popover-background.shown .popover-content>ul>li::before {
+    content: "";
+    height: 6px;
+    width: 6px;
+    background-color: #333;
+    color: #333;
+    border-radius: 50%;
+    position: absolute;
+    margin-top: .6em;
+    margin-left: 6px;
+}
+
+#actividad .content .cke_contents .bck-ul-1,
+#actividad .content .texto_curso .bck-ul-1,
+#actividad .content .workspace ul li .bck-ul-1 {
+    list-style-type: none;
+}
+
+#actividad .content .cke_contents .bck-ul-1 li,
+#actividad .content .cke_contents .bck-ul-1 li,
 #actividad .content .texto_curso .bck-ul-1 li,
-#actividad .content .workspace ul li .bck-ul-1 li,
-#actividad .popover-background.shown .popover-content .bck-ul-1 li {
+#actividad .popover-content .bck-ul-1 li,
+#actividad .content .workspace ul li .bck-ul-1 li {
+    padding-left: 40px;
+    position: relative;
+    list-style: none;
+    margin-bottom: 5px;
     font-size: 2rem;
     font-weight: 100;
     margin-left: -2px
 }
 
-#actividad .content .texto_curso .bck-ul-1 li:before, 
-#actividad .content .workspace ul li .bck-ul-1 li:before, 
-#actividad .popover-background.shown .popover-content .bck-ul-1 li:before {
+
+/*#actividad .content .texto_curso .bck-ul-1 li,
+#actividad .content .workspace ul li .bck-ul-1 li,
+#actividad .popover-background.shown .popover-content .bck-ul-1 li {
+    font-size: 2rem;
+    font-weight: 100;
+    margin-left: -2px
+}*/
+
+#actividad .content .cke_contents .bck-ul-1 li:before,
+#actividad .content .texto_curso ul.bck-ul-1 li:before,
+#actividad .popover-content ul.bck-ul-1 li:before,
+#actividad .content .workspace ul li ul.bck-ul-1 li:before {
     color: #1d1d1b;
     content: "";
     height: 12px;
