--- a/style.css
+++ b/style.css
@@ -65,7 +65,8 @@ p {
 }
 
 
-#book-index #indice .units ul li.active a,#book-index .col-main,body:not(.isTablet) #book-index #indice .units ul li:not(.disabled) a:hover {
+#book-index #indice .units ul li.active a,
+#book-index .col-main,body:not(.isTablet) #book-index #indice .units ul li:not(.disabled) a:hover {
     background: #0ca1ea
 }
 
@@ -102,16 +103,27 @@ p {
     -moz-border-radius: 4px;
     border-radius: 4px;
     -webkit-box-shadow: 1px 1px 1px 1px #c2c2c2;
-    box-shadow: 1px 1px 1px 1px #c2c2c2
+    box-shadow: 1px 1px 1px 1px #c2c2c2;
+    border-radius: 30px 10px 37px 10px;
 }
 
-#indice .units ul li.active:not(.disabled),#indice .units ul li:focus:not(.disabled) {
-    background: #139dc5
+#indice .units ul li.active:not(.disabled),
+#indice .units ul li:focus:not(.disabled) {
+    background: #139dc5;
+    border-radius: 30px 10px 37px 10px;
+    background: #007C39;
+        border-radius: 30px 10px 37px 10px;
+        border: 3px solid #fff;
 }
 
-#indice .units ul li.hover:not(.disabled),#indice .units ul li:hover:not(.disabled),
+#indice .units ul li.hover:not(.disabled),
+#indice .units ul li:hover:not(.disabled),
 body:not(.isTablet) #indice .units ul li:hover:not(.disabled) {
-    background: #1cb3df
+    background: #139dc5;
+    border-radius: 30px 10px 37px 10px;
+    background: #007C39;
+    border-radius: 30px 10px 37px 10px;
+    border: 3px solid #fff;
 }
 
 #book-index #indice .unit-content a,
