--- a/style.css
+++ b/style.css
@@ -2447,7 +2447,7 @@ table td.bck-td-10 {
 }
 
 #actividad .content .review .attemps span {
-    background-color: #08a9d7;
+    background-color: #007C39;
     border-radius: 30px 10px 37px 10px;
 
 }
