--- a/style.css
+++ b/style.css
@@ -2,6 +2,138 @@
 
 @charset "UTF-8";
 
+@font-face {
+    font-family: 'Soho Gothic Pro';
+    src: url('fonts/SohoGothicPro-Regular.eot');
+    src: url('fonts/SohoGothicPro-Regular.eot?#iefix') format('embedded-opentype'),
+        url('fonts/SohoGothicPro-Regular.woff') format('woff'),
+        url('fonts/SohoGothicPro-Regular.ttf') format('truetype'),
+        url('fonts/SohoGothicPro-Regular.svg#SohoGothicPro-Regular') format('svg');
+    font-weight: 500;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Soho Gothic Pro';
+    src: url('fonts/SohoGothicPro-Bold.eot');
+    src: url('fonts/SohoGothicPro-Bold.eot?#iefix') format('embedded-opentype'),
+        url('fonts/SohoGothicPro-Bold.woff') format('woff'),
+        url('fonts/SohoGothicPro-Bold.ttf') format('truetype'),
+        url('fonts/SohoGothicPro-Bold.svg#SohoGothicPro-Bold') format('svg');
+    font-weight: 700;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'StradaOT';
+    src: url('fonts/StradaOT-Light.eot');
+    src: url('fonts/StradaOT-Light.eot?#iefix') format('embedded-opentype'),
+        url('fonts/StradaOT-Light.woff') format('woff'),
+        url('fonts/StradaOT-Light.ttf') format('truetype'),
+        url('fonts/StradaOT-Light.svg#StradaOT-Light') format('svg');
+    font-weight: 300;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'StradaOT';
+    src: url('fonts/StradaOT.eot');
+    src: url('fonts/StradaOT.eot?#iefix') format('embedded-opentype'),
+        url('fonts/StradaOT.woff') format('woff'),
+        url('fonts/StradaOT.ttf') format('truetype'),
+        url('fonts/StradaOT.svg#StradaOT') format('svg');
+    font-weight: 500;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'StradaOT-Semibd';
+    src: url('fonts/StradaOT-Semibd.eot');
+    src: url('fonts/StradaOT-Semibd.eot?#iefix') format('embedded-opentype'),
+        url('fonts/StradaOT-Semibd.woff') format('woff'),
+        url('fonts/StradaOT-Semibd.ttf') format('truetype'),
+        url('fonts/StradaOT-Semibd.svg#StradaOT-Semibd') format('svg');
+    font-weight: 600;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Soho Gothic Pro';
+    src: url('fonts/SohoGothicPro-Medium.eot');
+    src: url('fonts/SohoGothicPro-Medium.eot?#iefix') format('embedded-opentype'),
+        url('fonts/SohoGothicPro-Medium.woff') format('woff'),
+        url('fonts/SohoGothicPro-Medium.ttf') format('truetype'),
+        url('fonts/SohoGothicPro-Medium.svg#SohoGothicPro-Medium') format('svg');
+    font-weight: 500;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'VAGRundschriftEF';
+    src: url('fonts/VAGRundschriftEF.eot');
+    src: url('fonts/VAGRundschriftEF.eot?#iefix') format('embedded-opentype'),
+        url('fonts/VAGRundschriftEF.woff') format('woff'),
+        url('fonts/VAGRundschriftEF.ttf') format('truetype'),
+        url('fonts/VAGRundschriftEF.svg#VAGRundschriftEF') format('svg');
+    font-weight: 500;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'StradaOT';
+    src: url('fonts/StradaOT-Bold.eot');
+    src: url('fonts/StradaOT-Bold.eot?#iefix') format('embedded-opentype'),
+        url('fonts/StradaOT-Bold.woff') format('woff'),
+        url('fonts/StradaOT-Bold.ttf') format('truetype'),
+        url('fonts/StradaOT-Bold.svg#StradaOT-Bold') format('svg');
+    font-weight: bold;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'ZineSlabDisOT-MediIt';
+    src: url('fonts/ZineSlabDisOT-MediIt.eot');
+    src: url('fonts/ZineSlabDisOT-MediIt.eot?#iefix') format('embedded-opentype'),
+        url('fonts/ZineSlabDisOT-MediIt.woff') format('woff'),
+        url('fonts/ZineSlabDisOT-MediIt.ttf') format('truetype'),
+        url('fonts/ZineSlabDisOT-MediIt.svg#ZineSlabDisOT-MediIt') format('svg');
+    font-weight: 500;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'ZineSlabDisOT-Medi';
+    src: url('fonts/ZineSlabDisOT-Medi.eot');
+    src: url('fonts/ZineSlabDisOT-Medi.eot?#iefix') format('embedded-opentype'),
+        url('fonts/ZineSlabDisOT-Medi.woff') format('woff'),
+        url('fonts/ZineSlabDisOT-Medi.ttf') format('truetype'),
+        url('fonts/ZineSlabDisOT-Medi.svg#ZineSlabDisOT-Medi') format('svg');
+    font-weight: 500;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'ZineSlabDisOT';
+    src: url('fonts/ZineSlabDisOT.eot');
+    src: url('fonts/ZineSlabDisOT.eot?#iefix') format('embedded-opentype'),
+        url('fonts/ZineSlabDisOT.woff') format('woff'),
+        url('fonts/ZineSlabDisOT.ttf') format('truetype'),
+        url('fonts/ZineSlabDisOT.svg#ZineSlabDisOT') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'ZineSansDisOT';
+    src: url('fonts/ZineSansDisOT.eot');
+    src: url('fonts/ZineSansDisOT.eot?#iefix') format('embedded-opentype'),
+        url('fonts/ZineSansDisOT.woff') format('woff'),
+        url('fonts/ZineSansDisOT.ttf') format('truetype'),
+        url('fonts/ZineSansDisOT.svg#ZineSansDisOT') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
 
 body {
     height: auto;
@@ -501,7 +633,7 @@ body:not(.edit) #actividad a:not(.cke_button):not(.zoom_flag_img) {
     padding: 7PX 70PX 7px 24px;
     border-radius: 30px 10px 37px 10px;
     font-weight: 700;
-    font-family: 'Source Sans Pro';
+    font-family: 'StradaOT-Semibd';
     text-transform: uppercase;
 }
 
@@ -930,7 +1062,7 @@ body:not(.edit) #actividad a:not(.cke_button):not(.zoom_flag_img) {
     margin-left: -15px;
     margin-top: 10px;
     font-size: 2rem;
-    /* font-family: Conv_FuturaStd-Medium; */
+    font-family: 'StradaOT-Semibd';
     line-height: 1.8em!important;
 }
 
@@ -948,7 +1080,7 @@ body:not(.edit) #actividad a:not(.cke_button):not(.zoom_flag_img) {
     margin-left: -40px;
     margin-right: 0;
     text-align: right;
-    /* font-family: Conv_FuturaStd-Medium; */
+    font-family: 'ZineSlabDisOT';
     font-size: 2.3rem;
     font-weight: 600;
     line-height: normal;
