--- a/style.css
+++ b/style.css
@@ -140,7 +140,7 @@ body {
     font-size: 16px;
     font-weight: 500;
     color: #231F20;
-    /*font-family: Conv_FuturaStd-Medium*/
+    font-family: 'StradaOT';
 }
 
 .body_clase .content-wrapper,
