--- a/style.css
+++ b/style.css
@@ -2749,7 +2749,7 @@ table td.bck-td-10 {
 .activitytag_listening #actividad .content .texto_curso ul.bck-ul-1 li:before,
 .activitytag_listening #actividad .popover-content ul.bck-ul-1 li:before,
 .activitytag_listening #actividad .content .workspace ul li ul.bck-ul-1 li:before {
-    background-color: #D2E0BD;
+    background-color: #F8DEB6;
 }
 
 .activitytag_listening .bck-box.bck-box-2 .bck-content {
