--- a/style.css
+++ b/style.css
@@ -1290,7 +1290,7 @@ body:not(.edit) #actividad a:not(.cke_button):not(.zoom_flag_img) {
     border-radius: 00px 50px 20px 50px;
     display: block;
     line-height: 1.43em;
-    padding: 10px;
+    padding: 10px 20px;
 }
 
 .bck-box.bck-box-4 .bck-title {
@@ -1302,7 +1302,7 @@ body:not(.edit) #actividad a:not(.cke_button):not(.zoom_flag_img) {
     width: fit-content;
     padding: 0px 35px 0px 12px;
     border-radius: 23px 39px 0px 4px;
-    left: -28px;
+    left: -23px;
     color: #fff;
 }
 
