--- a/style.css
+++ b/style.css
@@ -2679,7 +2679,7 @@ table td.bck-td-10 {
 }
 
 .activitytag_vocabulary .bck-box.bck-box-2 .bck-content {
-    border: 1px solid #78AA42;
+    border: 1px solid #208FCF;
 }
 
 .activitytag_vocabulary .bck-box.bck-box-2:after {
@@ -2687,7 +2687,7 @@ table td.bck-td-10 {
 }
 
 .activitytag_vocabulary .bck-box.bck-box-3 .bck-content {
-    border: 1px solid #78AA42;
+    border: 1px solid #208FCF;
 }
 
 .activitytag_vocabulary .bck-box.bck-box-3:after {
