--- a/style.css
+++ b/style.css
@@ -1316,18 +1316,34 @@ body:not(.edit) #actividad a:not(.cke_button):not(.zoom_flag_img) {
 .bck-box.bck-box-6 {
     margin-top: 15px;
     border: none;
-    background: transparent
-}
-
-.bck-box.bck-box-6 .bck-title {
-    color: inherit
-}
-
-.bck-box.bck-box-6 .bck-content {
+    background: transparent;
     background-color: #ffffff;
     box-shadow: inset -11px 2px 15px 0px #c8d2d9;
     padding: 8px 92px 8px 19px;
     border-radius: 0 20px 20px 0;
+}
+
+.bck-box.bck-box-6 .bck-title {
+    color: #738A96;
+}
+
+.bck-box.bck-box-6 .bck-title:after {
+    background: url(images/icono_caja_06.png);
+    content: "";
+    background-size: contain;
+    background-repeat: no-repeat;
+    padding: 53px 28px 0 25px;
+    position: absolute;
+    left: 12px;
+    z-index: 100;
+    top: 20%;
+    width: 30px;
+}
+
+
+.bck-box.bck-box-6 .bck-content {
+    padding: 8px 92px 8px 19px;
+    color: #414141;
 }
 
 .bck-box.bck-box-7 {
