--- a/style.css
+++ b/style.css
@@ -1332,11 +1332,11 @@ body:not(.edit) #actividad a:not(.cke_button):not(.zoom_flag_img) {
     content: "";
     background-size: contain;
     background-repeat: no-repeat;
-    padding: 53px 28px 0 25px;
+    padding: 66px 56px 0 25px;
     position: absolute;
-    left: 12px;
+    right: 9px;
     z-index: 100;
-    top: 20%;
+    top: 4%;
     width: 30px;
 }
 
